# grasp-miatmos

./: .gitattributes  .gitignore  .gitlab-ci.yml  .grasp-manager.gitlab-ci-test.yml  .grasp-manager.gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  KNOWN_BUGS.md  LICENSE  Makefile  README.md  UPGRADE.md  grasp-manager.sh  grasp-manager.yml.dist
examples/: CMakeLists.txt
examples/aod/: example_aod.sdat  settings_aod.yml
examples/lidar_and_sunphotometer/: example_lidar_sunphotometer_inversion_output.txt  settings_example_lidar_sunphotometer_inversion.yml
examples/polder/: settings_example_polder_inversion.yml  settings_example_polder_inversion_LB.yml
examples/sunphotometer/: example_sunphotometer_inversion_output.txt  settings_example_sunphotometer_inversion.yml
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  grasp.in  grasp_app.c  grasp_controller.c  grasp_controller.h  grasp_controller_functions.h  grasp_controller_iteration_callback.c  grasp_controller_iteration_callback.h  grasp_main.c  grasp_main.h  grasp_mpi_engine.c  grasp_mpi_engine.h  mo_grasp_controller.f90  mo_grasp_controller.h  python_grasp.c  python_grasp.h  python_grasp_static.c  python_grasp_static.h
src/global/: CMakeLists.txt  grasp_compilation_information.c  grasp_compilation_information.h  grasp_error_codes.h  grasp_parameters.c  grasp_parameters.h  grasp_retrieval_characteristic_type.h  grasp_retrieval_meas_type.h
src/input/: CMakeLists.txt  grasp_input.c  grasp_input.h  grasp_input_segment.c  grasp_input_segment.h  grasp_input_settings.h
src/input/drivers/: CMakeLists.txt
src/input/drivers/sdata/: CMakeLists.txt  grasp_input_driver_sdata.c  grasp_input_driver_sdata.h  grasp_input_driver_sdata_error_codes.h  grasp_input_driver_settings_sdata.h  sdata-impl.h  sdata.c  sdata.h  sdata_dump.c  test.c
src/input/transformers/: CMakeLists.txt
src/input/transformers/none/: grasp_input_transformer_none.h
src/input/util/: grasp_driver_settings.c  grasp_reindexer3D.c
src/output/: CMakeLists.txt  grasp_output.c  grasp_output_segment_result.c  grasp_output_segment_result.h  grasp_output_settings.h  grasp_output_stream.c  grasp_output_stream.h  grasp_output_stream_t.h  grasp_output_tile_result.c  grasp_output_tile_result.h  grasp_output_tile_result_setters.c  grasp_output_tile_result_setters.h
src/output/current_functions/: CMakeLists.txt
src/output/segment_functions/: CMakeLists.txt
src/output/segment_functions/classic_plot/: grasp_output_segment_classic_plot.c
src/output/segment_functions/csv/: CMakeLists.txt  grasp_output_segment_csv.c  grasp_output_segment_csv.h  grasp_output_segment_csv_settings.h
src/output/tile_functions/: CMakeLists.txt
src/output/tile_functions/csv/: CMakeLists.txt  grasp_output_tile_csv.c  grasp_output_tile_csv.h  grasp_output_tile_csv_settings.h
src/retrieval/: CMakeLists.txt
src/retrieval/constants_set/: mod_globals.f90  mod_globals.inc
src/retrieval/constants_set/generic/: mod_par_DLS.inc  mod_par_DLS_bin.inc  mod_par_OS.inc  mod_par_inv.inc
src/retrieval/constants_set/valgrind/: mod_par_OS.inc  mod_par_inv.inc
src/retrieval/external_interfaces/: c_fortran_dgssv_superlu4.c  c_fortran_dgssv_superlu5.c
src/retrieval/forward_model/: example_fw.c  example_fw.f90  external_interface.c  external_interface.f90  external_interface.h  mixture_ref_index_chem.f90  mod_molecular_scattering.f90
src/retrieval/forward_model/bbflux/: mod_abs_kd.f90  mod_bbflux.f90
src/retrieval/forward_model/gas_absorption/: mod_bbgas.f90  mod_bbgas.mod  mod_gas_abs_kd.f90
src/retrieval/forward_model/gas_absorption/BIB/: mod_alloc_gas_lut.f90  sub_gas_abs_kd.f90
src/retrieval/forward_model/lidar_signal/GARRLiC/: forw_lidar_garrlic.f90  lidar_signal.f90
src/retrieval/forward_model/phase_matrix/spheroid_package/: dls_fixget_bin.f90  dls_intrpl_orgn_bin.f90  dls_optchr_bin.f90  dls_read_input_bin.f90  forw_spheroid_package.f90  mod_alloc_kernels.f90  mod_par_dls_bin.f90  mod_type_dls.f90  phase_func.f90  sizedstr.f90
src/retrieval/forward_model/phase_matrix/transport_model/: mod_apm_transport_model.f90  mod_hydroscopic_growth.f90  mod_tr_model_derived_type.f90  mod_tr_model_derived_type_tracer_average.f90  phmx_transport_model.f90  set_transport_model.f90
src/retrieval/forward_model/radiative_transfer/rt_sos/: mod_par_os.f90  mod_rt.f90  mod_rt_sos.f90  mod_rt_sos_lut.f90  (+2 more)
src/retrieval/forward_model/surface/: mod_brm.f90
src/retrieval/interfaces/: forw_model.f90  forw_set_pixel_fit.f90  mod_add_meas_rnoise.f90  mod_fisher_matrix_ccs.f90  mod_functional_retrieval.f90  mod_par_type_aerosol.mod  mod_retr_general_output_derived_type.f90  mod_retr_settings_derived_type.f90  mod_retr_settings_par_type_particles.f90  mod_retr_settings_par_type_surface.f90  mod_sdata.f90  mod_sdata_derived_type.f90  mod_sdata_meas_type.f90  mod_vertical_distr_derived_type.f90  set_retr_general_output.f90  set_retr_settings.f90  solver_macros.inc  unpack_par_vect_ap.f90  validators.f90  vertical_distr.f90
src/retrieval/inversion/: err_estimates.f90  fisher_matrix.f90  iguess_apriori.f90  inversion.f90  inversion_subsystem_default.f90  iteration_callback.c  iteration_callback.h  mod_alloc_arrays.f90  mod_covariance_matrix.f90  mod_edges.f90  mod_par_inv.f90  residual.f90  smoothness.f90
src/retrieval/utilities/: mod_arrays_utils.f90  mod_intrpl_linear.mod  mod_intrpl_spline.f90  mod_inversion_utils.f90  mod_stop_report.f90  print_gout.f90  print_utils.f90  subset_index.f90  utils.f90
src/settings/: CMakeLists.txt  grasp_products.h  grasp_settings.c  grasp_settings.h  grasp_settings_assign_data.c  grasp_settings_assign_data.h  grasp_settings_data_types.c  grasp_settings_data_types.h  grasp_settings_t.h  grasp_settings_validators.c  grasp_settings_validators.h
src/test/: CMakeLists.txt  grasp-coverage.sh  grasp_python_test.c  grasp_test_aod.c  grasp_test_hdf5.sh  grasp_test_output.c  grasp_test_sdata.c  grasp_test_segmenter.sh
src/test/aod/: settings_aeronet.yml
src/test/meris/: settings_test.yml
src/test/sdata/: settings_sdata.yml
src/test/segmenter/: settings_segmenter.yml
(+52 files in other folders)
